tests/23-throw-from-catch-with-finally.out
handling exception
Error: "throw from finally"
#(tests/23-throw-from-catch-with-finally.p:16)       throw "throw from finally"
                                             |.......^
#(tests/23-throw-from-catch-with-finally.p:10) def tryIt() {
                                             |.^
#(tests/23-throw-from-catch-with-finally.p:19) tryIt()
                                             |.^
